objects/myIfeOrderHeaders__x.object
<CustomObject>
    <description>myIfeOrderHeaders</description>
    <externalDataSource>Order_Status</externalDataSource>
    <externalName>myIfeOrderHeaders</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>myIfeOrderHeaders</relationshipLabel>
        <relationshipName>myIfeOrderHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BILL_TO__c</fullName>
        <description>BILL_TO</description>
        <externalDeveloperName>BILL_TO</externalDeveloperName>
        <label>BILL_TO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ID__c</fullName>
        <description>CUSTOMER_ID</description>
        <externalDeveloperName>CUSTOMER_ID</externalDeveloperName>
        <label>CUSTOMER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_NAME__c</fullName>
        <description>CUSTOMER_NAME</description>
        <externalDeveloperName>CUSTOMER_NAME</externalDeveloperName>
        <label>CUSTOMER_NAME</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_PO__c</fullName>
        <description>CUSTOMER_PO</description>
        <externalDeveloperName>CUSTOMER_PO</externalDeveloperName>
        <label>CUSTOMER_PO</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLOW_STATUS_CODE__c</fullName>
        <description>FLOW_STATUS_CODE</description>
        <externalDeveloperName>FLOW_STATUS_CODE</externalDeveloperName>
        <label>FLOW_STATUS_CODE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FREIGHT_TERMS__c</fullName>
        <description>FREIGHT_TERMS</description>
        <externalDeveloperName>FREIGHT_TERMS</externalDeveloperName>
        <label>FREIGHT_TERMS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HEADER_ID__c</fullName>
        <description>HEADER_ID</description>
        <externalDeveloperName>HEADER_ID</externalDeveloperName>
        <label>HEADER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INCO_TERMS__c</fullName>
        <description>INCO_TERMS</description>
        <externalDeveloperName>INCO_TERMS</externalDeveloperName>
        <label>INCO_TERMS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDERED_DATE__c</fullName>
        <description>ORDERED_DATE</description>
        <externalDeveloperName>ORDERED_DATE</externalDeveloperName>
        <label>ORDERED_DATE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>ORDER_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_TYPE__c</fullName>
        <description>ORDER_TYPE</description>
        <externalDeveloperName>ORDER_TYPE</externalDeveloperName>
        <label>ORDER_TYPE</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_TERMS__c</fullName>
        <description>PAYMENT_TERMS</description>
        <externalDeveloperName>PAYMENT_TERMS</externalDeveloperName>
        <label>PAYMENT_TERMS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRICE_LIST_NAME__c</fullName>
        <description>PRICE_LIST_NAME</description>
        <externalDeveloperName>PRICE_LIST_NAME</externalDeveloperName>
        <label>PRICE_LIST_NAME</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROGRAM_NUMBER__c</fullName>
        <description>PROGRAM_NUMBER</description>
        <externalDeveloperName>PROGRAM_NUMBER</externalDeveloperName>
        <label>PROGRAM_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PURCHASE_ORDER__c</fullName>
        <description>PURCHASE_ORDER</description>
        <externalDeveloperName>PURCHASE_ORDER</externalDeveloperName>
        <label>PURCHASE_ORDER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_ADMIN__c</fullName>
        <description>SALES_ADMIN</description>
        <externalDeveloperName>SALES_ADMIN</externalDeveloperName>
        <label>SALES_ADMIN</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_ORDER__c</fullName>
        <description>SALES_ORDER</description>
        <externalDeveloperName>SALES_ORDER</externalDeveloperName>
        <label>SALES_ORDER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPMENT_PRIORITY__c</fullName>
        <description>SHIPMENT_PRIORITY</description>
        <externalDeveloperName>SHIPMENT_PRIORITY</externalDeveloperName>
        <label>SHIPMENT_PRIORITY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPSET__c</fullName>
        <description>SHIPSET</description>
        <externalDeveloperName>SHIPSET</externalDeveloperName>
        <label>SHIPSET</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_CUSTOMER_ID__c</fullName>
        <description>SHIP_TO_CUSTOMER_ID</description>
        <externalDeveloperName>SHIP_TO_CUSTOMER_ID</externalDeveloperName>
        <label>SHIP_TO_CUSTOMER_ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIP_TO_CUSTOMER_NAME__c</fullName>
        <description>SHIP_TO_CUSTOMER_NAME</description>
        <externalDeveloperName>SHIP_TO_CUSTOMER_NAME</externalDeveloperName>
        <label>SHIP_TO_CUSTOMER_NAME</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPECIAL_QA_INSP__c</fullName>
        <description>SPECIAL_QA_INSP</description>
        <externalDeveloperName>SPECIAL_QA_INSP</externalDeveloperName>
        <label>SPECIAL_QA_INSP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>STATUS</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>STATUS</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAIL_NUMBER__c</fullName>
        <description>TAIL_NUMBER</description>
        <externalDeveloperName>TAIL_NUMBER</externalDeveloperName>
        <label>TAIL_NUMBER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL__c</fullName>
        <description>TOTAL</description>
        <externalDeveloperName>TOTAL</externalDeveloperName>
        <label>TOTAL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEB_ORDER__c</fullName>
        <description>WEB_ORDER</description>
        <externalDeveloperName>WEB_ORDER</externalDeveloperName>
        <label>WEB_ORDER</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>myIfeOrderHeaders</label>
    <pluralLabel>myIfeOrderHeaders</pluralLabel>
</CustomObject>